# FPI

./: .gitignore  README.md
basic_ops/: Cargo.toml
basic_ops/src/: app.rs  convolve.rs  filters.rs  flip.rs  frame_image.rs  histogram.rs  lib.rs  linear_operations.rs  luminance.rs  main - Copia.rs  main.rs  menu.rs  message.rs  quantization.rs  quntization.rs  rotate.rs  tempCodeRunnerFile.rs  zoom.rs
img_test/: Cargo.toml
img_test/src/: main.rs
new_ui/: Cargo.toml
new_ui/src/: app.rs  histogram_graph.rs  image_decorator.rs  image_wrapper.rs  main.rs  preview.rs  side_menu.rs
ui/: Cargo.toml
ui/src/: app.rs  file_loading.rs  histogram_graph.rs  image_adaptor.rs  image_decorator.rs  image_wrapper.rs  preview.rs  side_menu.rs
