[package]
name = "photo_menges"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.20.1"
eframe = "0.20.1"
rfd = "0.10.0"
image = "0.24.5"
once_cell = "1.16.0"
basic_ops = { path = "../basic_ops"}
egui_extras = "0.20.0"